<resources>
    <string name="app_name">Chat</string>
    <string name="online">Online</string>
    <string name="type_your_message">Type your message...</string>
    <string name="seja_bem_vindo">Seja bem-vindo!</string>
    <string name="entre_com_seu_e_mail">Entre com seu e-mail</string>
    <string name="entre_com_sua_senha">Entre com sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="crie_uma_conta">Crie uma conta</string>
    <string name="crie_uma_nconta">Crie uma\nconta</string>
    <string name="seu_nome">Seu nome</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="hint_email">nome@email.com</string>
    <string name="senha">Senha</string>
    <string name="_6_a_12_caracteres">6 a 12 caracteres</string>
</resources>